# cython_trend_lines

./: README.md  pyproject.toml  requirements.txt  setup.py
cython_trend_lines/: __init__.py  covariance.cpp  covariance.h  trend_lines.cpp  trend_lines.pyx
